# dropboxignored

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: ignore.rs  main.rs  watcher.rs
src/ignorefile/: mod.rs  parse.rs
