[package]
name = "dropboxignored"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A lot like dropboxignore but with a file watcher"
repository = "https://github.com/csfalcione/dropboxignored"
readme = "README.md"
keywords = ["dropbox", "daemon", "dropboxignore"]

[dependencies]
xattr = "1.0.0"
clap.version = "4.2.2"
clap.features = ["derive"]
notify = "6.1.1"
nom = "7.1.3"
regex = "1.10.4"
